--- a/DataTransformer.DesktopApp/MainForm.resx
+++ b/DataTransformer.DesktopApp/MainForm.resx
@@ -57,4 +57,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="buttonsImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj01LjAuNC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAA
+        BQAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABECIAAxUBGwNfAf8DXwH/A18B/wNfAf8DXwH/A18B/wNfAf8DBgEHHAADEAEU
+        A18B/wNfAf8DXwH/A18B/wNfAf8DXwH/A18B/5wAA18B8gNfAf8DXwH/AzsBVwwAA0oBeANfAf8DXwH/
+        A10BxBQAA18B8ANfAf8DXwH/A0UBbQwAA1cBoANfAf8DXwH/A1ABipAAA2AB9gNfAf8DSwF6HAADXgHX
+        A18B/wNdAcEMAANfAfcDXwH/A0wBfxwAA2AB9gNfAf8DUwGSiAADIgEuA18B/wM+AV4kAANfAdgDXwH/
+        AwQBBQQAAycBNgNfAf8DPAFZJAADYAH2A18B/4gAA18B/wNfAf8sAANfAf8DXwH/BAADXwH/A18B/xAA
+        AwcBCQNfAf8UAANfAf8DXwH/hAADXwH/AxEBFiwAA0gBcwNfAf8EAANfAf8DCgEMDAADBwEJA18B/wNf
+        Af8DXwH/EAADVwGiA18B/4AAAygBNwNfAf8IAANfAf8DXwH/FAADXwH/A18B/wgAA18B/wNEAWoDXwH/
+        DAADBgEHA18B/wNfAf8DUgGOA18B/wNfAf8QAANfAf+AAANWAZ8DXwH/CAADBQEGA18B/wNfAf8MAANf
+        Af8DXwH/DAADXwH/A14B3wNfAf8MAANfAf8DXwH/CAADTQGAA18B/wNfAf8MAANfAf+AAAM2AU4DXwH/
+        DAADEwEYA18B/wNfAf8EAANfAf8DXwH/AwYBCAwAA18B/wNTAZIDXwH/CAADXwH/A18B/xAAA04BhANf
+        Af8DXwH/CAADXwH/hAADXwH/AwgBCgwAAxUBGwNfAf8DXwH/A18B/wMKAQ0MAAM9AVwDXwH/BAADXwH/
+        CAADCgENGAADTAF/CAADRQFsA18B/4QAA18B/wNgAf4QAAMPARMDXwH/AwgBChAAA18B/wNfAf8EAANf
+        Af8DYAH2LAADXwH/A18B/4QAA0EBZANfAf8DGwEkJAADSQF2A18B/wMTARgEAANaAasDXwH/AwoBDSQA
+        A04BgwNfAf8DEAEUiAADXwH/A18B/wMeASccAAM7AVgDXwH/A18B8gwAA18B/wNfAf8DCgENHAADNQFN
+        A18B/wNgAfGQAANeAf0DXwH/A2AB/gMGAQcMAAMTARgDXwH/A18B/wNeAfgUAANfAf8DXwH/A18B9wQB
+        DAADCgEMA18B/wNfAf8DYAH5mAADQQFkA18B/wNfAf8DXwH/A18B/wNfAf8DXwH/A18B/wMkATAcAANa
+        AasDXwH/A18B/wNfAf8DXwH/A18B/wNfAf8DXwH/AycBNqgAAzQBTANXAaADKwE7NAADVAGVA14B3wNF
+        AW2YAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB8AEHAfABDwQAAeEBwwHh
+        AcMEAAHHAfEBxwHxBAABjwH4AY8B+QQAAZ8B/AGeAXwEAAGfAfwBnAE8BAABMwHmATgBHgQAATEBzgE5
+        AY4EAAE4AY4BMwHGBAABnAEcAbcB7AQAAZ4BPAGfAfwEAAGPAfgBjwH4BAABxwHxAccB8QQAAeEBwwHh
+        AcMEAAHwAQcB8AEHBAAB/gE/Af4BPwQACw==
+</value>
+  </data>
 </root>
